Back In Time

Version 0.9.18
* GNOME: rework settings dialog

Version 0.9.16
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)
* add Slovak translation (Tomáš Vadina <kyberdev@gmail.com>)
* update Swedish translation (Niklas Grahn <terra.unknown@yahoo.com>)
* update French translation (Michel Corps <mahikeulbody@gmail.com>)
* update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
* update Slovenian translation (Vanja Cvelbar <cvelbar@gmail.com>)
* don't show the snapshot that is being taken in snapshots list
* GNOME & KDE4: when the application starts and snapshots directory don't exists show a messagebox
* give more information for 'take snapshot' progress (to prove that is not blocked)
* MainWindow: rename 'Timeline' column with 'Snapshots'
* when it tries to take a snapshot if the snapshots directory don't exists
  (it is on a removable drive that is not plugged) it will notify and wait maximum 30 seconds 
  (for the drive to be plugged)
* GNOME & KDE4: add notify if the snapshots directory don't exists
* KDE4: rework MainWindow

Version 0.9.14
* update German translation (Michael Wiedmann <mw@miwie.in-berlin.de>)
* update Swedish translation (Niklas Grahn <terra.unknown@yahoo.com>)
* update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)
* update French translation (Michel Corps <mahikeulbody@gmail.com>)
* GNOME & KDE4: rework MainWindow
* GNOME & KDE4: rework SettingsDialog
* GNOME & KDE4: add "smart" remove

Version 0.9.12
* bug fix: now if you include ".abc" folder and exclude ".*", ".abc" will be saved in the snapshot
* KDE4: add help
* add Slovenian translation (Vanja Cvelbar <cvelbar@gmail.com>)
* bug fix (GNOME): bookmarks with special characters

Version 0.9.10
* add Swedish translation (Niklas Grahn <terra.unknown@yahoo.com>)
* KDE4: drop and drop from backintime files view to any file manager