@@ -1,7 +1,5 @@
 TODO:
-* add an option to enable/disable notifications
 * Toolbars: add different texts for labels and tooltips
-* SettingsDialog: rework using tabs
 * KDE4: handle command line parameters
 * KDE4: handle application raise
 * KDE4: add right-click menu
