@@ -2,6 +2,7 @@ Back In Time
 
 Version 0.9.18
 * GNOME: rework settings dialog
+* SettingDialog: add an option to enable/disable notifications
 
 Version 0.9.16
 * update Spanish translation (Francisco Manuel García Claramonte <franciscomanuel.garcia@hispalinux.es>)
